REGRESSION(r176631): [EFL] Fullscreen feature doesn't work correctly on MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=144906

Patch by Daegyu Lee <daegyu.lee@navercorp.com> on 2015-05-13
Reviewed by Gyuyoung Kim.

* UIProcess/CoordinatedGraphics/PageViewportController.cpp:
(WebKit::PageViewportController::updateMinimumScaleToFit): Recover the r176631 condition to
call applyScaleAfterRenderingContents function to apply correct scale.

Canonical link: https://commits.webkit.org/162997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184283 268f45cc-cd09-0410-ab3c-d52691b4dbfc